update footer Credits

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <label for="Numbrrs"> characters </label>
     </div>
 
-    <p>© Copyright By Mahesh Technicals</p>
+
+    <p>© Copyright By <a href="https://maheshtechnicals.com/" target="" _blank>Mahesh Technicals</a> | A <a href="https://maheshtechnicals.com/" target="" _blank>Mahesh Technicals</a>ll Rights Reserved</p>
 
   </div>
 
